[gd_scene load_steps=2 format=2]

[ext_resource path="res://demos/arrive/GUI.gd" type="Script" id=1]

[node name="GUI" type="MarginContainer"]
anchor_bottom = 1.0
margin_right = 40.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 207.0
margin_bottom = 580.0

[node name="MaxSpeed" type="HBoxContainer" parent="Controls"]
margin_right = 187.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Controls/MaxSpeed"]
margin_top = 4.0
margin_right = 125.0
margin_bottom = 19.0
rect_min_size = Vector2( 125, 15 )
text = "Max speed"

[node name="LineEdit" type="LineEdit" parent="Controls/MaxSpeed"]
margin_left = 129.0
margin_right = 187.0
margin_bottom = 24.0
focus_mode = 1

[node name="MaxAccel" type="HBoxContainer" parent="Controls"]
margin_top = 28.0
margin_right = 187.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Controls/MaxAccel"]
margin_top = 4.0
margin_right = 125.0
margin_bottom = 19.0
rect_min_size = Vector2( 125, 15 )
text = "Max acceleration"

[node name="LineEdit" type="LineEdit" parent="Controls/MaxAccel"]
margin_left = 129.0
margin_right = 187.0
margin_bottom = 24.0
focus_mode = 1

[node name="ArrivalTolerance" type="HBoxContainer" parent="Controls"]
margin_top = 56.0
margin_right = 187.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="Controls/ArrivalTolerance"]
margin_top = 4.0
margin_right = 125.0
margin_bottom = 19.0
rect_min_size = Vector2( 125, 15 )
text = "Arrival tolerance"

[node name="LineEdit" type="LineEdit" parent="Controls/ArrivalTolerance"]
margin_left = 129.0
margin_right = 187.0
margin_bottom = 24.0
focus_mode = 1

[node name="DecelRadius" type="HBoxContainer" parent="Controls"]
margin_top = 84.0
margin_right = 187.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="Controls/DecelRadius"]
margin_top = 4.0
margin_right = 125.0
margin_bottom = 19.0
rect_min_size = Vector2( 125, 15 )
text = "Deceleration radius"

[node name="LineEdit" type="LineEdit" parent="Controls/DecelRadius"]
margin_left = 129.0
margin_right = 187.0
margin_bottom = 24.0
focus_mode = 1

[node name="Help" type="VBoxContainer" parent="Controls"]
margin_top = 112.0
margin_right = 187.0
margin_bottom = 144.0

[node name="Controls" type="Label" parent="Controls/Help"]
margin_right = 187.0
margin_bottom = 14.0
text = "Controls"

[node name="Label" type="Label" parent="Controls/Help"]
margin_top = 18.0
margin_right = 187.0
margin_bottom = 32.0
text = "Mouse click"
